Setting up navigation between activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">Spenditure</string>
+    <string name="title_home">Home</string>
     <string name="title_reports">Reports</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_view_transactions">View Transactions</string>
     <string name="title_create_transaction">Create Transaction</string>
-    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_home">Home Activity</string>
 </resources>
