--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="field_type">Type</string>
     <string name="field_comments">Comments</string>
     <string name="field_categories">Categories</string>
+
+    <string name="label_edit">Edit</string>
+    <string name="label_delete">Delete</string>
 </resources>
