--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="field_categories">Category</string>
     <string name="field_image">Image</string>
     <string name="label_take_image">Take Image</string>
+    <string name="label_confirm">Confirm</string>
 
     // View Transaction Activity
     <string name="label_edit">Edit</string>
