--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="title_activity_home">Home Activity</string>
     <string name="title_profile">Your Profile</string>
     <string name="title_stats">Stats</string>
+    <string name="title_view_goals">View Goals</string>
 
     // Transaction Activities
     <string name="field_what_the_heck">What the heck?</string>
@@ -45,4 +46,6 @@
     <string name="label_security_question">Security Question</string>
     <string name="label_answer">Answer</string>
     <string name="label_email">Email</string>
+
+    // Goal Activities
 </resources>
